--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!doctype html>
 
-<html lang="en">
-<head>
-    <meta charset = "utf-8">
-
-    <title></title>
-    <meta name="description" content="Comp 290 Git Practice">
-    <meta name="author" content="Cameron Simbeck">
-
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-</head>
+<html>
 
 <body>
-    <script src="js/scripts.js"></script>
-<body>
+
+    <h1>Cameron Simbeck</h1>
+    <p>Practice for comp290</p>
+
+</body>
 </html>
